# Resource-library.core

./: .gitignore  APIs.http  Cargo.toml  config.toml.template  shell.nix
src/: main.rs
src/handlers/: get_all_resources.rs  mod.rs
