[package]
name = "qichen_reslib"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
thiserror = "2.0.12"

tokio = { version = "1.44.1", features = ["full"] }
axum = { version = "0.8.1", features = ["macros"] }
serde = "1.0.219"
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = [
  "runtime-tokio-native-tls",
  "macros",
  "uuid",
  "chrono",
  "postgres",
] }
